@@ -1,6 +1,6 @@
 AUX build-2.0.xml 5730 RMD160 b2f1e004b504f1a30949e4417b536b0f19e61721 SHA1 20c25889783f4b988eb5491db343ed5580985f59 SHA256 b288a9238ed0bc5b239f50daa10535c93952b9811d097160c75719241096b925
 DIST maven-model-2.0.tar.bz2 20838 RMD160 fb66d6eca47db3bcc7b0274319e54ab09bb23830 SHA1 44a625b9c1d82b4cf810d623e09b9b6249515a34 SHA256 efe5a517f9bb8da4169908bd00c48522fc198226ee2357161683ae18de9fd623
 DIST maven-model-gen-src-2.0.tar.bz2 29787 RMD160 518b41b3097df783462238a3f0c351ba594ca2ab SHA1 ca0e39962e16b0603b7cf24cdace1e89c555906c SHA256 b94e8cd4ea151a6a42edda159da2bdba427bb761f64fbdb47443fadee349f0d7
-EBUILD maven-model-2.0.ebuild 477 RMD160 ed59dcf49093d9a8da22c026a9e7427c9645eb90 SHA1 67a871f8f43649fba368ad010fcbf92616ae8f3d SHA256 d4a88cff555c1dda98c446ec2f451f692f82697e23f74923afe3c7012a4f99d3
-MISC ChangeLog 275 RMD160 68619119eb1d1b469ed58b7a30eaa398b2b546f9 SHA1 e0c4b7b4b15c77e2f0c26bbbebaa8450743412e3 SHA256 c7d76925a498908abbb6cc936a4eda67b9daf3f62b5e7f88e04d3afb29b35dfb
+EBUILD maven-model-2.0.ebuild 566 RMD160 5f4a7bc789792701b81902c6a26d91f7d30ba373 SHA1 cbe6e2528d88fa4aebbd34092c7f6fc393c7bb93 SHA256 4f6a00c23c2ea38fad42069c9598bfa63f7e216be230ea0a0e863af8de330216
+MISC ChangeLog 395 RMD160 8a61ff3a75d69d29a781fd32ed09b4e9ee5e54b9 SHA1 3123cefb045de7f23be2059d4bc79b8e45fae61b SHA256 1e42a8e9219ff4b508f925bce9dffe12117e5ac2d8b9bc5838d804454d3cd8e0
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
